--- a/Week1/week1.tex
+++ b/Week1/week1.tex
@@ -116,6 +116,12 @@
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\NormalTok{knitr}\SpecialCharTok{::}\NormalTok{opts\_chunk}\SpecialCharTok{$}\FunctionTok{set}\NormalTok{(}\AttributeTok{echo=} \ConstantTok{TRUE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \NormalTok{knitr}\SpecialCharTok{::}\NormalTok{opts\_chunk}\SpecialCharTok{$}\FunctionTok{set}\NormalTok{(}\AttributeTok{echo =} \ConstantTok{TRUE}\NormalTok{)}
 \CommentTok{\# Set Working Directory}
 \FunctionTok{setwd}\NormalTok{(}\StringTok{"C:/Users/Joshu/Desktop/Masters/DSC640/Week1"}\NormalTok{)}
